<resources>
    <string name="app_name">MyChat</string>

    <string name="action_logout">Logout</string>
    <string name="action_send">Send</string>
    <string name="prompt_message">Message</string>

    <string name="connect">Connected</string>
    <string name="disconnect">Disconnected, Please check your internet connection</string>
    <string name="error_connect">Failed to connect</string>

    <!-- messages -->
    <string name="message_welcome">Welcome to %s Room</string>
    <plurals name="message_participants">
        <item quantity="one">there\'s %d participant</item>
        <item quantity="other">there are %d participants</item>
    </plurals>
    <string name="message_user_joined">%s joined</string>
    <string name="message_user_left">%s left</string>
    <string name="user_action_typing">is typing</string>

    <string name="title_login">Join</string>

    <!-- Strings related to login -->
    <string name="prompt_username">What\'s your nickname?</string>
    <string name="action_sign_in">Join</string>
    <string name="action_sign_in_short">Join</string>
    <string name="error_field_required">This field is required</string>


    <string name="online_users">Online Users</string>
    <string name="chat_title">%s</string>
    <string name="new_room">New Room</string>
    <string name="join_room">Join Room</string>
    <string name="room_name">Room Name</string>
    <string name="enter_room_name">Enter room name</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="action_leave">Leave</string>
    <string name="welcome">Welcome %s</string>
    <string name="chatting_with">Chatting with %s</string>
    <string name="room_chat">%s Room</string>
    <string name="join">Join</string>
</resources>