<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/messages"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:scrollbars="vertical"
            android:scrollbarStyle="outsideOverlay"
            tools:listitem="@layout/item_message"/>

        <LinearLayout
            android:id="@+id/action_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/tiny_margin"
            android:paddingLeft="@dimen/small_margin"
            android:paddingRight="@dimen/small_margin"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/username"
                android:textSize="12sp"
                android:textColor="?android:textColorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/action"
                android:textSize="12sp"
                android:textColor="?android:textColorSecondary"
                android:text="@string/user_action_typing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/tiny_margin"
                android:paddingRight="@dimen/tiny_margin"
                android:singleLine="true"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/small_margin"
            android:paddingRight="@dimen/small_margin"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/message_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/prompt_message"
                android:imeActionId="@integer/send"
                android:imeActionLabel="@string/action_send"
                android:imeOptions="actionSend"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

            <ImageButton
                android:id="@+id/send_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_send"
                android:contentDescription="@string/action_send" />

        </LinearLayout>

    </LinearLayout>
</layout>